# chipmunks-api

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check.yml  checks.yml  ci.yml
app/: dependencies.py  main.py  settings.py
tests/: conftest.py  test_main.py
