[project]
name = "chipmunks-api"
version = "0.0.1"
description = "Cute little inventory manager"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Molly Rose", email = "molly@mollymorphous.dev"},
]
classifiers = [
    "Private :: Do Not Upload",
]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mypy[faster-cache]>=1.15.0",
    "ruff>=0.11.2",
]

[tool.mypy]
strict = true
packages = ["app"]
