[project]
name = "chipmunks-api"
version = "0.0.1"
description = "Cute little inventory manager"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Molly Rose", email = "molly@mollymorphous.dev"},
]
classifiers = [
    "Private :: Do Not Upload",
]
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.115.12",
    "granian>=2.2.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.39",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "granian[reload]>=2.2.0",
    "mypy[faster-cache]>=1.15.0",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-env>=1.1.5",
    "pytest-randomly>=3.16.0",
    "ruff>=0.11.2",
]

[tool.mypy]
strict = true
packages = ["app"]
exclude = ["^tests/"]

[tool.pytest.ini_options]
addopts = "-q -ra"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
testpaths = ["tests"]
